Changed button label

--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -195,7 +195,7 @@
             </label>
           </div>
           <button type="button" class="btn btn-outline-success" data-dismiss="modal">Zrušiť</button>
-          <%= submit_tag 'Finalizovať', class: 'btn btn-danger', id: 'finish-confirmation-button', disabled: true %>
+          <%= submit_tag 'Vložiť', class: 'btn btn-danger', id: 'finish-confirmation-button', disabled: true %>
         </div>
       <% end %>
     </div>
