--- a/app/views/shared/_js_filter.html.erb
+++ b/app/views/shared/_js_filter.html.erb
@@ -8,3 +8,42 @@
                   autocomplete: :off, class: 'form-control js-filter max-width-340',
                   data: { target: target_table_body }, placeholder: placeholder %>
 </div>
+
+<script type="text/javascript">
+  function filterableText(text) {
+    text = text.toLowerCase();
+    text = text.normalize("NFD").replace(/[\u0300-\u036f]/g, "");
+
+    return text;
+  }
+
+
+  $('.js-filter').on('keyup search', function() {
+    var searchedText = filterableText($(this).val());
+    var tableRows = $('.' + $(this).data('target') + ' > tr');
+
+    tableRows.each(function() {
+      var currentRow = $(this);
+      var showCurrentRow = false;
+
+      if (searchedText.length >= 2) {
+        $(currentRow).find('.js-filterable').each(function () {
+          var cellText = filterableText($(this).text());
+
+          if (cellText.indexOf(searchedText) >= 0) {
+            showCurrentRow = true;
+            return false; // breaks out
+          }
+        });
+      } else {
+        showCurrentRow = true;
+      }
+
+      if (showCurrentRow) {
+        $(currentRow).show();
+      } else {
+        $(currentRow).hide();
+      }
+    });
+  });
+</script>
