--- a/app/views/articles/_tile.html.erb
+++ b/app/views/articles/_tile.html.erb
@@ -1,4 +1,4 @@
-<div class="card my-2">
+<div class="card my-2 eq-height-col">
   <div class="card-body">
     <div class="clearfix">
       <h3 class="card-title float-left <%= 'text-secondary' unless article.published? %>">
