--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -15,7 +15,7 @@
 <% if @articles.any? %>
   <div class="row">
     <% @articles.each do |article| %>
-      <div class="col-lg-6">
+      <div class="col-lg-6 eq-height-container">
         <%= render 'tile', article: article, expand_content: false %>
       </div>
     <% end %>
