Jumper of the season

--- a/app/views/shared/_hot_announcement.html.erb
+++ b/app/views/shared/_hot_announcement.html.erb
@@ -1,7 +1,7 @@
 <div class="text-center bg-dark py-2 font-weight-bold">
   <u>
-    <%= link_to "NOVÝ spôsob bodovania!",
-                "#{pages_about_path}#pointing-system",
-                class: 'quiet-link', target: :_blank %>
+    <%= link_to "Skokan roka",
+                pages_season_jumpers_path,
+                class: 'quiet-link' %>
   </u>
 </div>
