Page heading changed

--- a/app/views/pages/season_jumpers.html.erb
+++ b/app/views/pages/season_jumpers.html.erb
@@ -1,13 +1,5 @@
-<div class="row">
-  <div class="col">
-    <p class="lead float-left">
-      Skokan roka
-    </p>
-  </div>
-</div>
-
+<h1 class="text-center py-4">Skokan roka</h1>
 <hr>
-<%= render "seasons/heading", season: selected_season %>
 
 <p class="text-justified m-2">
   Toto je špeciálny rebríček hráčov, ktorí hrali túto súťaž v aktuálnej sezóne a aj v sezóne predchádzajúcej.
