Added no-wrap class to table

--- a/app/views/pages/season_jumpers.html.erb
+++ b/app/views/pages/season_jumpers.html.erb
@@ -34,7 +34,7 @@
             </span>
           </td>
           <td><%= jumper[:jump] %></td>
-          <td><%="(#{jumper[:previous_position]} -> #{jumper[:current_position]})" %></td>
+          <td class="text-nowrap"><%="(#{jumper[:previous_position]} -> #{jumper[:current_position]})" %></td>
         </tr>
       <% end %>
       </tbody>
