Added nowraps to tables, unused tests commented out

--- a/app/views/matches/_table_row.html.erb
+++ b/app/views/matches/_table_row.html.erb
@@ -58,7 +58,7 @@
   <td>
     <%= match_info(match) %>
   </td>
-  <td>
+  <td class="text-nowrap">
     <% if delayed %>
       <%= link_to match.round.full_label, matches_path(round_id: match.round.id), class: 'btn btn-sm btn-success' %>
     <% else %>
