Added bubblechart for season jumpers

--- a/app/views/pages/season_jumpers.html.erb
+++ b/app/views/pages/season_jumpers.html.erb
@@ -40,6 +40,8 @@
       </tbody>
     </table>
   </div>
+
+  <div id="chart-div" style="height: 700px; width: 100%;"></div>
 <% else %>
   <div class="row">
     <div class="col">
@@ -49,3 +51,4 @@
 <% end %>
 
 <%= render "shared/scripts_autoreload" %>
+<%= render "pages/scripts_googlecharts" %>
