--- a/app/views/pages/season_jumpers.html.erb
+++ b/app/views/pages/season_jumpers.html.erb
@@ -5,6 +5,10 @@
   Toto je špeciálny rebríček hráčov, ktorí hrali túto súťaž v aktuálnej sezóne a aj v sezóne predchádzajúcej.
   Poradie hráčov v tomto rebríčku teda vynecháva hráčov, ktorí predchádzajúcu sezónu túto súťaž nehrali.
   Hráči sú v tomto rebríčku zoradení podľa posunu v rebríčku oproti predchádzajúcej sezóne.
+  <strong>
+    Pozor, v tomto rebríčku figurujú iba tí hráčí, ktorí v predchádzajúcej sezóne vynechali maximálne
+    jeden zápas.
+  </strong>
 </p>
 
 <% if @season_jumpers.any? %>
