Fixed typo on page

--- a/app/views/pages/season_jumpers.html.erb
+++ b/app/views/pages/season_jumpers.html.erb
@@ -6,7 +6,7 @@
   Poradie hráčov v tomto rebríčku teda vynecháva hráčov, ktorí predchádzajúcu sezónu túto súťaž nehrali.
   Hráči sú v tomto rebríčku zoradení podľa posunu v rebríčku oproti predchádzajúcej sezóne.
   <strong>
-    Pozor, v tomto rebríčku figurujú iba tí hráčí, ktorí v predchádzajúcej sezóne vynechali maximálne
+    Pozor, v tomto rebríčku figurujú iba tí hráči, ktorí v predchádzajúcej sezóne vynechali maximálne
     jeden zápas.
   </strong>
 </p>
