--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,10 @@
 <div class=".navbar-expand-sm">
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <%= link_to 'Zápasy', matches_path, class: 'navbar-brand' %>
+    <div class="logo">
+      <%= link_to matches_path, class: 'navbar-brand' do %>
+        <em>ma</em><strong>TO</strong><em>tenis</em>
+      <% end %>
+    </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
