--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -94,6 +94,14 @@
       </i>
     </p>
 
+    <hr>
+    <h3 class="text-center py-5">
+      Každý hráč tejto súťaže sa zaväzuje, že bude dodržiavať
+      <%= link_to "Súťažný poriadok", pages_game_rules_path, target: :_blank %>
+    </h3>
+
+    <hr>
+
     <h4 class="text-center pt-5">Viac info a prihlásenie</h4>
     <p class="text-center">
       Tomáš Radič ● <strong><%= link_to '0905 289 248', 'tel:0905289248' %></strong><br>
