Fixed text on page

--- a/app/views/pages/game_rules.html.erb
+++ b/app/views/pages/game_rules.html.erb
@@ -15,8 +15,9 @@
       <li>
         Zápasy si rozhodujú hráči sami, pričom sa riadia
         <a href="https://www.stz.sk/soubory/stp_pravidlatenisu_sj.pdf" target="_blank">
-          platnými pravidlami tenisu
-        </a>.
+          platnými pravidlami
+        </a>
+        tenisu.
         Zápasy sa hrajú na 2 víťazné sety. Tretí, rozhodujúci set sa hrá ako supertiebreak
         (tiebreak do 10 bodov s rozdielom min. 2 bodov). V prípade, že obaja hráči chcú a majú dostatok
         času, môžu na rozhodnutie zápasu odohrať klasický set. Ak jeden z hráčov s klasickým
