Added link to footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -52,6 +52,13 @@
       </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col">
+      <p class="text-center font-weight-light">
+        <small><u><%= link_to "Súťažný poriadok", pages_game_rules_path %></u></small>
+      </p>
+    </div>
+  </div>
 <!--  <div class="row">-->
 <!--    <div class="col">-->
 <!--      <p class="text-center font-italic font-weight-light">-->
