--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -97,7 +97,7 @@
     <hr>
     <h3 class="text-center py-5">
       Každý hráč tejto súťaže sa zaväzuje, že bude dodržiavať
-      <%= link_to "Súťažný poriadok", pages_game_rules_path, target: :_blank %>
+      <%= link_to "Súťažný poriadok", pages_game_rules_path %>
     </h3>
 
     <hr>
