Added Bart Simpson image

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -115,6 +115,16 @@ a.quiet-link {
   flex: 1;
 }
 
+.center-image {
+  width: 100%;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+ol {
+  padding-inline-start: 20px;
+}
+
 //
 // Tables
 
