--- a/app/views/pages/game_rules.html.erb
+++ b/app/views/pages/game_rules.html.erb
@@ -42,6 +42,7 @@
 
     <hr>
     <h4 class="text-center pt-5">Správanie sa na dvorci</h4>
+    <%= image_tag "bart_fair_play.png", alt: "Bart Simpson", class: "center-image" %>
     <ol class="text-justify">
       <li>
         Hráč má právo počas zápasu požiadať svojho súpera, aby sa "nevyjadroval na jeho adresu
