--- a/app/views/pages/game_rules.html.erb
+++ b/app/views/pages/game_rules.html.erb
@@ -62,6 +62,17 @@
         stranu dvorca.
       </li>
     </ol>
+
+    <hr>
+    <h4 class="text-center pt-5">Opustenie dvorca</h4>
+    <ol class="text-justify">
+      <li>
+        Odchádzanie od zápasu je primárne na dohode hráčov. No ak sa hráči nevedia dohodnúť,
+        opustenie dvorca je každému z hráčov povolené najviac 1x za štandardný set (alebo po jeho
+        skončení) na najviac 5 minút, ale nie počas rozohratej hry. V prípade, že hráč opustí dvorec
+        v rozpore s týmto pravidlom a zároveň bez dohody so súperom, bude takýto zápas hráčovi skrečovaný.
+      </li>
+    </ol>
   </div>
   <div class="col-md-3 hidden-sm-down"></div>
 </div>
