--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,6 +26,9 @@
 <!--        <li class="nav-item">-->
           <%#= link_to 'Sezóna 2020', pages_season2020_path, class: 'nav-link'  %>
 <!--        </li>-->
+        <li class="nav-item">
+          <%= link_to 'Sezóna 2021', pages_season2021_path, class: 'nav-link'  %>
+        </li>
       </ul>
       <ul class="navbar-nav">
         <% if user_signed_in? %>
