Updated rules of game

--- a/app/views/pages/game_rules.html.erb
+++ b/app/views/pages/game_rules.html.erb
@@ -64,13 +64,23 @@
     </ol>
 
     <hr>
+    <h4 class="text-center pt-5">Meškanie na zápas</h4>
+    <ol class="text-justify">
+      <li>
+        V prípade ak sa hráči nedohodnú inak a súper prítomného hráča mešká na zápas viac ako 15 minút,
+        tento zápas je považovaný za skrečovaný súperom.
+      </li>
+    </ol>
+
+    <hr>
     <h4 class="text-center pt-5">Opustenie dvorca</h4>
     <ol class="text-justify">
       <li>
-        Odchádzanie od zápasu je primárne na dohode hráčov. No ak sa hráči nevedia dohodnúť,
+        Odchádzanie od rozohratého zápasu je primárne na dohode hráčov. No ak sa hráči nevedia dohodnúť,
         opustenie dvorca je každému z hráčov povolené najviac 1x za štandardný set (alebo po jeho
         skončení) na najviac 5 minút, ale nie počas rozohratej hry. V prípade, že hráč opustí dvorec
-        v rozpore s týmto pravidlom a zároveň bez dohody so súperom, bude takýto zápas hráčovi skrečovaný.
+        v rozpore s týmto pravidlom a zároveň bez dohody so súperom, považuje sa to za skrečovanie
+        zápasu hráčom.
       </li>
     </ol>
   </div>
